tests/ui/rand_random.stderr
error: nondeterministic workflow API detected; use durust::side_effect(...).await instead
 --> tests/ui/rand_random.rs:5:10
  |
5 | async fn bad(_: BadInput) -> durust::Result<()> {
  |          ^^^
